# func-benchmark-visualizer

./: .gitignore  CMakeLists.txt  README.md  visualize.py
src/: foo.h  main.cpp
src/bm/: any_argument_adapter.h  func_bench.cpp
src/profiler/: profiler.h
